Fixed: overflow in the main page and added position prop to the Wave component (#2)
* Fixed: overflow in the main page and refactor for the Wave component

* Fixed: position prop to the Wave component

--- a/components/Wave.module.css
+++ b/components/Wave.module.css
@@ -1,5 +1,5 @@
 .wave {
-  width: 100vw;
+  width: 100%;
   height: 100%;
 }
 
